test/conv/constptr_to_ptr.vp
//! stage: check
//! expect-compile: error

pub fn main() : void
{
    var a : int32 = 0;
    var p : const int32* = &a;
    var q : int32* = p;  // error: cannot strip const implicitly
}